Fixed spacing issues

--- a/src/sass/components/_components.card.scss
+++ b/src/sass/components/_components.card.scss
@@ -6,6 +6,7 @@
 .card {
   background: white;
   padding: $inuit-global-spacing-unit;
+  padding-bottom: 0;
   box-shadow: 0px 2px 9px 2px rgba(0,0,0,0.09);
   max-width: 30em;
   margin: auto;
