--- a/src/sass/elements/_elements.paragraphs.scss
+++ b/src/sass/elements/_elements.paragraphs.scss
@@ -1,3 +1,5 @@
 p {
   max-width: 30em;
+  display: inline-block;
+  width: 100%;
 }
